FEATURE: Core | Added option to move completed download on removal [amc1]
FEATURE: Core | Signed updates for increased security [Parg]
FEATURE: Core | UDP fallback on connection fail [Parg]
FEATURE: Core | Support for initial crypto tracker spec [Parg]
FEATURE: Core | Faster queued torrent startup [Parg]
FEATURE: Core | Option to disable tracker support for full-scrape [Parg]

FEATURE: UI   | File pieces shown in files view [Parg]
FEATURE: UI   | Ability to best guess folder you want to save torrent data to based on existing torrents [TuxPaper]
FEATURE: UI   | Filter for Config Options [TuxPaper]
FEATURE: UI   | "Help -> Generate Debug Info" to help us solve bugs [TuxPaper]
FEATURE: UI   | Ability to customise the speed intervals for download / upload speed menus [amc1]
FEATURE: UI   | Ability to rename the displayed title of a download [amc1]
FEATURE: UI   | "date added", "idle up", "idle down", "req in", "req out" colmns added to MyTorrents [Parg]
FEATURE: UI   | manual file recheck order [Parg]
FEATURE: UI   | Option to remember passwords [Parg]
FEATURE: UI   | OSX: Open .torrent files into Azureus via Finder/Desktop/etc [TuxPaper]

FEATURE: Plug | Simple NAT-PMP implementation [Marc Colosimo]


CHANGE: Core  | Reduced starting many pieces instead of completing current ones [MjrTom]
CHANGE: Core  | Further modifications to optimistic disconnect algorithm [MjrTom]
CHANGE: Core  | Longer scrape delays: [TuxPaper]
                 - 1 hr min for torrents in stopped state
                 - 2 hrs min for torrents in error state
                 - 3 hrs min when tracker sends no torrent info (no hash error)
                 - As per usual, flags->min_request_interval will override next scrape time
CHANGE: Core  | Asynchronous existing torrent loading at startup (makes startup feel faster) [TuxPaper]
CHANGE: Core  | Disk read cache disabled by default [Parg]