@@ -2072,9 +2072,21 @@ ConfigView.section.style.showiconbar=Show Toolbar
 MainWindow.menu.view.iconbar=Toolbar
 
 MyTorrentsView.menu.rename=Rename
-MyTorrentsView.menu.rename.enter.title=Rename Download 
-MyTorrentsView.menu.rename.enter.message=Enter a new name for this download.
-MyTorrentsView.menu.rename.enter.message.2=If no text is entered, the original name will be used.
+MyTorrentsView.menu.rename.displayed=Rename Displayed Name
+MyTorrentsView.menu.rename.save_path=Rename Save Path
+MyTorrentsView.menu.rename.displayed_and_save_path=Rename Both
+
+MyTorrentsView.menu.rename.displayed.enter.title=Rename Displayed Name 
+MyTorrentsView.menu.rename.displayed.enter.message=Enter a new name to display for this download.
+MyTorrentsView.menu.rename.displayed.enter.message.2=If no text is entered, the original name will be used.
+
+MyTorrentsView.menu.rename.save_path.enter.title=Rename Save Path 
+MyTorrentsView.menu.rename.save_path.enter.message=Enter a new save path name for this download.
+MyTorrentsView.menu.rename.save_path.enter.message.2=If no text is entered, the download's displayed name will be used.
+
+MyTorrentsView.menu.rename.displayed_and_save_path.enter.title=Rename Download 
+MyTorrentsView.menu.rename.displayed_and_save_path.enter.message=Enter a new name for this download.
+MyTorrentsView.menu.rename.displayed_and_save_path.enter.message.2=If no text is entered, the original values will be used.
 
 UIDebugGenerator.messageask.title=Debug Generator
 UIDebugGenerator.messageask.text=Please enter a description of the bug you are reporting
